@@ -1,3 +1,6 @@
+2007-07-30 yo
+* Add Movement_getPriceCalculationOperandDict.
+
 2007-02-28 Aurel
 * define most cache
 
